Fix overflow for main.main for desctops

--- a/src/pug/pages/calc/calc.scss
+++ b/src/pug/pages/calc/calc.scss
@@ -2,6 +2,8 @@
 
 .page-calc {
     main.main {
-        overflow: initial;
+        @media (min-width: $lg) {
+            overflow: initial;
+        }
     }
 }
